--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -77,10 +77,14 @@
       console.log(item_id);
 
         if(cart[item_id]!=undefined){
-          cart[item_id]=cart[item_id]+1
+          quantity=cart[item_id][0]+1;
+          cart[item_id][0] = quantity;
+          // cart[item_id]=cart[item_id]+1
         }
         else{
-          cart[item_id]=1
+          quantity = 1;
+          name = document.getElementById("nm"+item_id).innerHTML;
+          cart[item_id] = [quantity,name];
         }
 
       console.log(cart);
@@ -102,27 +106,23 @@
       var cartString = "";
       cartString+="<h5>This is your cart</h5>";
       var cartIndex = 1;
-      // for(var x in cart){
-      //   cartString += cartIndex;
-      //   console.log("value: "+cart[x])
-      //   var val="nm"+x;
-      //   console.log(val);
-      //   var title=document.getElementById(val).innerHTML;
-      //
-      //   cartString+=title + "Qty:" + cart[x];
-      //   cartIndex+=1;
-    // }
 
         for(var x in cart){
-          cartString+= cartIndex;
           if(document.getElementById("nm"+x)!=null){
-            cartString+=document.getElementById("nm"+x).innerHTML+" Qty: "+cart[x]+"<br>";
+            cartString += cartIndex+ "   ";
+            cartString += document.getElementById("nm"+x).innerHTML + " Qty: " + cart[x][0] + "<br>";
+
             cartIndex+=1;
           }
+
         }
+        console.log(cartString);
+
+        cartString+="<a href='/checkout'><button class='btn btn-warning' id='checkout'>Checkout</button></a>";
 
       document.getElementById("cart").setAttribute('data-content',cartString);
       $('[data-toggle="popover"]').popover();
+
     }
 
   </script>
